# logos

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
deploy/compose/: docker-compose.yml  metadata.json
deploy/helm/logos/: Chart.yaml  values.yaml
deploy/helm/logos/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  service.yaml
examples/: gen_fixtures.rs
examples/clients/: README.md
examples/clients/csharp/: Program.cs
examples/clients/go/: main.go
examples/clients/java/: Client.java
examples/clients/kotlin/: KotlinClient.kt
examples/clients/python/: client.py
src/: broker.rs  config.rs  consumer_group.rs  lib.rs  main.rs  metadata.rs  metrics.rs  protocol.rs  replication.rs  sdk.rs  security.rs
src/storage/: mod.rs
tests/: load.rs  protocol_compat.rs  replication.rs
