[package]
name = "logos"
version = "0.1.0"
edition = "2021"
authors = ["rust-keeper-team"]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
bytes = "1.5"
bincode = "1.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "sink"] }
crc32fast = "1.4"
serde_json = "1.0"
tokio-rustls = { version = "0.24", features = ["logging"] }
axum = { version = "0.6", features = ["json"] }
prometheus = "0.14"
once_cell = "1"
rustls-pemfile = "1"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
